fixing main content and footer spacing

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -25,3 +25,7 @@ header {
   align-items: center;
   padding: 2rem;
 }
+
+main {
+  min-height: 100vh;
+}
